--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-# exclude .idea from git tracking/sync
+## exclude .idea from git tracking/sync
 .idea/
 leetCode/
 testCode/
 index-files/
 out/
 
-# ignore generated html files,
+## ignore generated html files
 *.html
 *.js
 *.css
